--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ var macos_enabled = (query["macos"] || query["macos"] == null) && query["macos"]
 var active_data_only = (query["activeonly"] || query["activeonly"] == null) && query["activeonly"] != "false";
 
 if (active_data_only) {
-  document.writeln("<ol class='breadcrumb'><li><a href='full_dashboard.html'>Full Dashboard</a></li><li>Active Dashboard</li></ol>");
+  document.writeln("<ol class='breadcrumb'><li><a href='full_dashboard.html'>Full Dashboard</a></li><li>Active Dashboard</li><li><a href='performance.html'>Performance</a></li></ol>");
 } else {
-  document.writeln("<ol class='breadcrumb'><li>Full Dashboard</li><li><a href='index.html'>Active Dashboard</a></li></ol>");
+  document.writeln("<ol class='breadcrumb'><li>Full Dashboard</li><li><a href='index.html'>Active Dashboard</a></li><li><a href='performance.html'>Performance</a></li></ol>");
 }
 
   </script>
