--- a/_posts/LU/2017-01-04-EnergyPlus-c3bbf4634e50103c1c47c7865e287acf19cc4217-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
+++ b/_posts/LU/2017-01-04-EnergyPlus-c3bbf4634e50103c1c47c7865e287acf19cc4217-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
@@ -3,8 +3,8 @@ title: EnergyPlus-c3bbf4634e50103c1c47c7865e287acf19cc4217-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-c3bbf4634e50103c1c47c7865e287acf19cc4217-x86_64-Linux-Ubuntu-14.04-gcc-4.8.html
 tags: data
 layout: ci_results
-date: '2017-01-04 21:16:20'
-unhandled_failure: false
+date: '2017-01-04 21:16:55'
+unhandled_failure: true
 build_error_count: 0
 build_warning_count: 0
 package_error_count: 0
@@ -29,7 +29,7 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-gcc-4.8
-pending: true
+pending: false
 analyze_only: false
 build_time: 
 test_time: 
@@ -51,7 +51,7 @@ coverage_functions: 0
 coverage_total_functions: 0
 coverage_url: 
 asset_url: 
-performance_total_time: 
+performance_total_time: 0
 performance_test_count: 0
 
 ---
@@ -62,7 +62,7 @@ performance_test_count: 0
   "test_results": [
 
   ],
-  "failure": null,
+  "failure": "error: RPC failed; result=56, HTTP code = 200\nfatal: The remote end hung up unexpectedly\nfatal: early EOF\nfatal: index-pack failed\n\n[\"/home/elee/ci/decent_ci/lib/potentialbuild.rb:222:in `block in run_script'\", \"/home/elee/ci/decent_ci/lib/potentialbuild.rb:203:in `each'\", \"/home/elee/ci/decent_ci/lib/potentialbuild.rb:203:in `run_script'\", \"/home/elee/ci/decent_ci/lib/potentialbuild.rb:554:in `clone_regression_repository'\", \"/home/elee/ci/decent_ci/ci.rb:260:in `block (3 levels) in <main>'\", \"/home/elee/ci/decent_ci/ci.rb:231:in `each'\", \"/home/elee/ci/decent_ci/ci.rb:231:in `block (2 levels) in <main>'\", \"/home/elee/ci/decent_ci/ci.rb:227:in `each'\", \"/home/elee/ci/decent_ci/ci.rb:227:in `block in <main>'\", \"/home/elee/ci/decent_ci/ci.rb:152:in `each'\", \"/home/elee/ci/decent_ci/ci.rb:152:in `<main>'\"]",
   "package_results": [
 
   ],
@@ -71,8 +71,8 @@ performance_test_count: 0
     "permalink": "EnergyPlus-c3bbf4634e50103c1c47c7865e287acf19cc4217-x86_64-Linux-Ubuntu-14.04-gcc-4.8.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-04 21:16:20",
-    "unhandled_failure": false,
+    "date": "2017-01-04 21:16:55",
+    "unhandled_failure": true,
     "build_error_count": 0,
     "build_warning_count": 0,
     "package_error_count": 0,
@@ -97,7 +97,7 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-gcc-4.8",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
     "build_time": null,
     "test_time": null,
@@ -117,8 +117,15 @@ performance_test_count: 0
     "coverage_total_functions": 0,
     "coverage_url": null,
     "asset_url": null,
-    "performance_total_time": null,
+    "performance_total_time": 0,
     "performance_test_count": 0
   },
-  "performance_results": null
+  "performance_results": {
+    "object_files": [
+
+    ],
+    "test_files": [
+
+    ]
+  }
 }
