--- a/_posts/LU/2017-01-05-EnergyPlus-ff1514acdb773b8a6290b6b4bfed936f86d6b2d4-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/LU/2017-01-05-EnergyPlus-ff1514acdb773b8a6290b6b4bfed936f86d6b2d4-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-ff1514acdb773b8a6290b6b4bfed936f86d6b2d4-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-ff1514acdb773b8a6290b6b4bfed936f86d6b2d4-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-05 09:08:03'
+date: '2017-01-05 09:09:01'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.101214757
+test_time: 1.015990591
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-ff1514acdb773b8a6290b6b4bfed936f86d6b2d4-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-05 09:08:03",
+    "date": "2017-01-05 09:09:01",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.101214757,
+    "test_time": 1.015990591,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
