--- a/_posts/CPS/2017-01-05-EnergyPlus-248c2281581a4417599aff25734cc4eb0a045f64-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
+++ b/_posts/CPS/2017-01-05-EnergyPlus-248c2281581a4417599aff25734cc4eb0a045f64-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-248c2281581a4417599aff25734cc4eb0a045f64-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-248c2281581a4417599aff25734cc4eb0a045f64-x86_64-Linux-Ubuntu-14.04-gcc-4.8.html
 tags: data
 layout: ci_results
-date: '2017-01-05 15:53:40'
+date: '2017-01-05 15:54:38'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -24,15 +24,15 @@ package_name:
 tag_name: 
 commit_sha: 248c2281581a4417599aff25734cc4eb0a045f64
 branch_name: CleanupPressureSystem
-test_run: false
+test_run: true
 pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-gcc-4.8
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 4.968e-06
+test_time: 2.066489877
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -50,8 +50,10 @@ coverage_total_lines: 0
 coverage_functions: 0
 coverage_total_functions: 0
 coverage_url: 
-asset_url: 
-performance_total_time: 
+asset_url: ! 'http://energyplus.s3-website-us-east-1.amazonaws.com/assets/2017-01-05-EnergyPlus-248c228158-x86_64-gcc-4.8
+
+'
+performance_total_time: 0
 performance_test_count: 0
 
 ---
@@ -71,7 +73,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-248c2281581a4417599aff25734cc4eb0a045f64-x86_64-Linux-Ubuntu-14.04-gcc-4.8.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-05 15:53:40",
+    "date": "2017-01-05 15:54:38",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -92,15 +94,15 @@ performance_test_count: 0
     "tag_name": null,
     "commit_sha": "248c2281581a4417599aff25734cc4eb0a045f64",
     "branch_name": "CleanupPressureSystem",
-    "test_run": false,
+    "test_run": true,
     "pull_request_issue_id": "",
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-gcc-4.8",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 4.968e-06,
+    "test_time": 2.066489877,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
@@ -116,9 +118,16 @@ performance_test_count: 0
     "coverage_functions": 0,
     "coverage_total_functions": 0,
     "coverage_url": null,
-    "asset_url": null,
-    "performance_total_time": null,
+    "asset_url": "http://energyplus.s3-website-us-east-1.amazonaws.com/assets/2017-01-05-EnergyPlus-248c228158-x86_64-gcc-4.8\n",
+    "performance_total_time": 0,
     "performance_test_count": 0
   },
-  "performance_results": null
+  "performance_results": {
+    "object_files": [
+
+    ],
+    "test_files": [
+
+    ]
+  }
 }
