--- a/_posts/137048597-HWCOAOS/2017-01-05-EnergyPlus-7e2b274cf4ccf0f3e0f4538162dbeb4223bbce5a-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
+++ b/_posts/137048597-HWCOAOS/2017-01-05-EnergyPlus-7e2b274cf4ccf0f3e0f4538162dbeb4223bbce5a-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-7e2b274cf4ccf0f3e0f4538162dbeb4223bbce5a-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-7e2b274cf4ccf0f3e0f4538162dbeb4223bbce5a-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html
 tags: data
 layout: ci_results
-date: '2017-01-05 22:35:01'
+date: '2017-01-05 22:38:34'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-cppcheck-1.61
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 163.045437676
 test_time: 
 package_time: 
 install_time: 
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-7e2b274cf4ccf0f3e0f4538162dbeb4223bbce5a-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-05 22:35:01",
+    "date": "2017-01-05 22:38:34",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,9 +97,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-cppcheck-1.61",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 163.045437676,
     "test_time": null,
     "package_time": null,
     "install_time": null,
