--- a/_posts/AE2T/2017-01-06-EnergyPlus-8c735ebeeca3f6cad816469535a245847dcb2c0d-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/AE2T/2017-01-06-EnergyPlus-8c735ebeeca3f6cad816469535a245847dcb2c0d-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,8 +3,8 @@ title: EnergyPlus-8c735ebeeca3f6cad816469535a245847dcb2c0d-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-8c735ebeeca3f6cad816469535a245847dcb2c0d-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-06 03:50:31'
-unhandled_failure: false
+date: '2017-01-06 03:51:21'
+unhandled_failure: true
 build_error_count: 0
 build_warning_count: 0
 package_error_count: 0
@@ -29,7 +29,7 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
 build_time: 
 test_time: 
@@ -62,7 +62,7 @@ performance_test_count: 0
   "test_results": [
 
   ],
-  "failure": null,
+  "failure": "746: unexpected token at '{\"tool\": \"license-check\", \"message\": \"License year is incorrect\", \"'\n[\"/usr/lib/ruby/1.9.1/json/common.rb:148:in `parse'\", \"/usr/lib/ruby/1.9.1/json/common.rb:148:in `parse'\", \"/home/elee/ci/decent_ci/lib/resultsprocessor.rb:50:in `parse_custom_check_line'\", \"/home/elee/ci/decent_ci/lib/resultsprocessor.rb:109:in `block in process_custom_check_results'\", \"/home/elee/ci/decent_ci/lib/resultsprocessor.rb:107:in `each'\", \"/home/elee/ci/decent_ci/lib/resultsprocessor.rb:107:in `process_custom_check_results'\", \"/home/elee/ci/decent_ci/lib/custom_check.rb:16:in `block in custom_check'\", \"/home/elee/ci/decent_ci/lib/custom_check.rb:9:in `each'\", \"/home/elee/ci/decent_ci/lib/custom_check.rb:9:in `custom_check'\", \"/home/elee/ci/decent_ci/lib/potentialbuild.rb:474:in `do_build'\", \"/home/elee/ci/decent_ci/lib/potentialbuild.rb:505:in `do_test'\", \"/home/elee/ci/decent_ci/ci.rb:273:in `block (3 levels) in <main>'\", \"/home/elee/ci/decent_ci/ci.rb:231:in `each'\", \"/home/elee/ci/decent_ci/ci.rb:231:in `block (2 levels) in <main>'\", \"/home/elee/ci/decent_ci/ci.rb:227:in `each'\", \"/home/elee/ci/decent_ci/ci.rb:227:in `block in <main>'\", \"/home/elee/ci/decent_ci/ci.rb:152:in `each'\", \"/home/elee/ci/decent_ci/ci.rb:152:in `<main>'\"]",
   "package_results": [
 
   ],
@@ -71,8 +71,8 @@ performance_test_count: 0
     "permalink": "EnergyPlus-8c735ebeeca3f6cad816469535a245847dcb2c0d-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-06 03:50:31",
-    "unhandled_failure": false,
+    "date": "2017-01-06 03:51:21",
+    "unhandled_failure": true,
     "build_error_count": 0,
     "build_warning_count": 0,
     "package_error_count": 0,
@@ -97,7 +97,7 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
     "build_time": null,
     "test_time": null,
