--- a/_posts/develop/2017-01-06-EnergyPlus-a5b04d73ecfef706cda7d0543ccad31e7c27087a-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/develop/2017-01-06-EnergyPlus-a5b04d73ecfef706cda7d0543ccad31e7c27087a-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-a5b04d73ecfef706cda7d0543ccad31e7c27087a-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-a5b04d73ecfef706cda7d0543ccad31e7c27087a-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-06 18:11:15'
+date: '2017-01-06 18:12:08'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.086349112
+test_time: 1.013428672
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-a5b04d73ecfef706cda7d0543ccad31e7c27087a-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-06 18:11:15",
+    "date": "2017-01-06 18:12:08",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.086349112,
+    "test_time": 1.013428672,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
