--- a/_posts/137048597-HWCOAOS/2017-01-11-EnergyPlus-3b7a828663cfcffdd4db62f7ad55e1328cddea0d-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/137048597-HWCOAOS/2017-01-11-EnergyPlus-3b7a828663cfcffdd4db62f7ad55e1328cddea0d-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-3b7a828663cfcffdd4db62f7ad55e1328cddea0d-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-3b7a828663cfcffdd4db62f7ad55e1328cddea0d-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-11 23:01:53'
+date: '2017-01-11 23:02:48'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 1
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.087350537
+test_time: 1.014538393
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -57,7 +57,13 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "tst/EnergyPlus/unit/OASystemHWPreheatCoil.unit.cc",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "[license-check] License year is incorrect"
+    }
   ],
   "test_results": [
 
@@ -71,9 +77,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-3b7a828663cfcffdd4db62f7ad55e1328cddea0d-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-11 23:01:53",
+    "date": "2017-01-11 23:02:48",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 1,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -97,10 +103,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.087350537,
+    "test_time": 1.014538393,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
